--- a/jst-timeline.css
+++ b/jst-timeline.css
@@ -3,6 +3,7 @@
   overflow-x: scroll;
   position: relative;
   width: 100%;
+  height: 150px;
   cursor: grab;
   -webkit-user-select: none; /* Chrome all / Safari all */
   -moz-user-select: none; /* Firefox all */
@@ -18,7 +19,7 @@
 
 .timeline-box .line-timeline {
   position: absolute;
-  top: 98px;
+  bottom: 38px;
   height: 1px;
   width: 100%;
   background-color: #aaa;
