--- a/jst-timeline.css
+++ b/jst-timeline.css
@@ -57,6 +57,9 @@
   font-size: 12px;
   color: #fff;
   background-color: #076e95;
+  border-radius: 4px;
+  box-shadow: 2px 2px 4px #888888;
+  width: 148px;
 }
 
 .timeline-box .father-box .data-box .vertical-line {
