Added CSS property to handle text size

--- a/jst-timeline.css
+++ b/jst-timeline.css
@@ -54,12 +54,15 @@
   display: block;
   font-family: "Exo 2", "Regular";
   padding: 8px;
-  font-size: 12px;
+  font-size: 14px;
   color: #fff;
   background-color: #076e95;
   border-radius: 4px;
   box-shadow: 2px 2px 4px #888888;
-  width: 148px;
+  width: 155px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .timeline-box .father-box .data-box .vertical-line {
